--- a/.gitignore
+++ b/.gitignore
@@ -240,7 +240,6 @@ orleans.codegen.cs
 
 # RIA/Silverlight projects
 Generated_Code/
-
 # Backup & report files from converting an old project file
 # to a newer Visual Studio version. Backup files are not needed,
 # because we have git ;-)
@@ -274,7 +273,7 @@ FakesAssemblies/
 # Node.js Tools for Visual Studio
 .ntvs_analysis.dat
 node_modules/
-
+package*.json
 # Visual Studio 6 build log
 *.plg
 
