feat(sitemap): add sitemap crawl option

--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -13,6 +13,7 @@ jobs:
           FAIL_TOTAL_COUNT: 10000
           EXTERNAL: false
           SITE_WIDE: true
+          SITEMAP: true
           SUBDOMAINS: true
           TLD: true
           LIST: true
