chore(cli): fix external usage

--- a/action.yml
+++ b/action.yml
@@ -117,7 +117,8 @@ runs:
       uses: baptiste0928/cargo-install@v1
       with:
         crate: a11ywatch_cli
-        version: "0.8.37"
+        version: "0.9.2"
+        features: ${{ inputs.SLIM && "grpc" }}
 
     - name: Configure CLI creds
       if: ${{ inputs.A11YWATCH_TOKEN }}
