--- a/action.yml
+++ b/action.yml
@@ -78,7 +78,7 @@ inputs:
     required: false
     default: true
   UPGRADE:
-    description: Upgrade the CLI and docker images to latest across runs.
+    description: Upgrade the CLI to latest across runs.
     required: false
     default: false
 outputs:
@@ -95,6 +95,19 @@ runs:
         ref: ${{ github.event.pull_request.head.ref }}
         clean: false
 
+    - name: Get yarn cache directory path
+      id: yarn-cache-dir-path
+      run: echo "dir=$(yarn cache dir)" >> $GITHUB_OUTPUT
+      shell: bash
+
+    - uses: actions/cache@v3
+      id: yarn-cache
+      with:
+        path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+        key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+        restore-keys: |
+          ${{ runner.os }}-yarn-
+
     - name: Cache cargo crates
       uses: actions/cache@v3
       id: cache-cargo
@@ -102,7 +115,11 @@ runs:
         cache-name: cache-cargo-crates
       with:
         path: |
-          ~/.cargo/
+          ~/.cargo/bin/
+          ~/.cargo/registry/index/
+          ~/.cargo/registry/cache/
+          ~/.cargo/git/db/
+          target/
         key: ~/.cargo/bin/a11ywatch
 
     - name: Install Rust, Cargo-Update, Protobuf Compiler
@@ -146,29 +163,12 @@ runs:
     - name: Build A11yWatch Service
       if: ${{ inputs.EXTERNAL == 'false' }}
       shell: bash
-      run: a11ywatch build --standalone ${{ inputs.UPGRADE == 'true' && '--upgrade' || '' }}
+      run: a11ywatch build --standalone --local ${{ inputs.UPGRADE == 'true' && '--upgrade' || '' }}
 
     - name: Start A11yWatch Service
       if: ${{ inputs.EXTERNAL == 'false' }}
       shell: bash
-      run: a11ywatch start --standalone
-
-    - name: Wait for Healthy Container
-      if: ${{ inputs.EXTERNAL == 'false' }}
-      shell: bash
-      run: |
-        attempt=0
-        while [ $attempt -le 30 ]; do
-            attempt=$(( $attempt + 1 ))
-            echo "Waiting for server to be up (attempt: $attempt)..."
-            result=$(docker logs a11ywatch)
-            if grep "^chrome launched and connected" <<< $result; then
-              echo "A11yWatch ready!"
-              sleep 0.8
-              break
-            fi
-            sleep 0.3
-        done
+      run: a11ywatch start --standalone --local
 
     - name: A11yWatch Scan [Local]
       if: ${{ inputs.EXTERNAL == 'false' && inputs.SITE_WIDE == 'false' }}
