--- a/action.yml
+++ b/action.yml
@@ -37,6 +37,10 @@ inputs:
     description: Include all TLD extensions.
     required: false
     default: false
+  RECORD:
+    description: Enable video recording audits to a directory location.
+    required: false
+    default: ""
   FAIL_TOTAL_COUNT:
     description: Use to fail the CI if the amount of issues of type errors and warnings is greater than the count.
     required: false
@@ -108,6 +112,15 @@ runs:
         restore-keys: |
           ${{ runner.os }}-yarn-
 
+    - name: Cache playwright binaries
+      if: ${{ inputs.EXTERNAL == 'false' }}
+      uses: actions/cache@v3
+      id: playwright-cache
+      with:
+        path: |
+          ~/.cache/ms-playwright
+        key: ${{ runner.os }}-playwright-${{ env.PLAYWRIGHT_VERSION }}
+
     - name: Cache cargo crates
       uses: actions/cache@v3
       id: cache-cargo
@@ -135,7 +148,7 @@ runs:
       uses: baptiste0928/cargo-install@v1
       with:
         crate: a11ywatch_cli
-        version: "0.10.4"
+        version: "0.10.7"
         features: "grpc"
 
     - name: A11yWatch CLI Install
@@ -143,7 +156,7 @@ runs:
       uses: baptiste0928/cargo-install@v1
       with:
         crate: a11ywatch_cli
-        version: "0.10.4"
+        version: "0.10.7"
 
     - name: Configure CLI creds
       if: ${{ inputs.A11YWATCH_TOKEN }}
@@ -160,10 +173,31 @@ runs:
       shell: bash
       run: a11ywatch --set-cv-url ${{ inputs.COMPUTER_VISION_ENDPOINT }}
 
+    - name: Configure Recording
+      if: ${{ inputs.RECORD }}
+      shell: bash
+      run: a11ywatch --set-recording ${{ inputs.RECORD }}
+
+    - name: Configure Recording
+      if: ${{ inputs.RECORD }}
+      shell: bash
+      run: a11ywatch --set-recording ${{ inputs.RECORD }}
+
+    - uses: FedericoCarboni/setup-ffmpeg@v2
+      if: ${{ inputs.RECORD && inputs.RECORD != 'false' }}
+
     - name: Build A11yWatch Service
       if: ${{ inputs.EXTERNAL == 'false' }}
       shell: bash
       run: a11ywatch build --standalone --local ${{ inputs.UPGRADE == 'true' && '--upgrade' || '' }}
+
+    - run: npx playwright install --with-deps
+      if: ${{ inputs.EXTERNAL == 'false' && steps.playwright-cache.outputs.cache-hit != 'true' }}
+      shell: bash
+
+    - run: npx playwright install-deps
+      if: ${{ inputs.EXTERNAL == 'false' && steps.playwright-cache.outputs.cache-hit != 'true' }}
+      shell: bash
 
     - name: Start A11yWatch Service
       if: ${{ inputs.EXTERNAL == 'false' }}
@@ -272,6 +306,12 @@ runs:
       with:
         message: "fix(accessibility): add recommendations from scan"
         committer_name: GitHub Actions
+
+    - uses: actions/upload-artifact@v3
+      if: ${{ inputs.RECORD && inputs.RECORD != 'false' && failure() || success() }}
+      with:
+        name: Recordings
+        path: ${{ inputs.RECORD && inputs.RECORD != 'false' && inputs.RECORD || './recordings'  }}
 
     - name: Stop A11yWatch Service
       if: ${{ !inputs.EXTERNAL }}
