--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -18,4 +18,4 @@ jobs:
           TLD: true
           LIST: true
           UPGRADE: true
-          RECORD: recordings
+          RECORD: recordings/
