--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -10,7 +10,7 @@ jobs:
         uses: ./
         with:
           WEBSITE_URL: https://a11ywatch.com
-          FAIL_TOTAL_COUNT: 100
+          FAIL_TOTAL_COUNT: 40
           EXTERNAL: false
           SITE_WIDE: true
           SITEMAP: true
@@ -18,4 +18,5 @@ jobs:
           TLD: true
           LIST: true
           UPGRADE: true
-          RECORD: recordings
+        # env:
+        #   DEFAULT_RUNNERS: htmlcs
