--- a/action.yml
+++ b/action.yml
@@ -312,7 +312,7 @@ runs:
     #   run: echo "recording_dir=$( echo "$(a11ywatch --find-tmp-dir)""/${{inputs.RECORD}}" )" >> $GITHUB_OUTPUT
 
     - uses: actions/upload-artifact@v3
-      if: ${{ inputs.RECORD && inputs.RECORD != 'false' && failure() || success() }}
+      if: ${{ inputs.RECORD && inputs.RECORD != 'false' && (failure() || success()) }}
       with:
         name: Recordings
         # path: ${{ steps.a11ywatch-recordings-directory.outputs.recording_dir  }}
