--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -9,8 +9,8 @@ jobs:
       - name: A11yWatch website scan
         uses: ./
         with:
-          WEBSITE_URL: https://a11ywatch.com
-          FAIL_TOTAL_COUNT: 100
+          WEBSITE_URL: https://jeffmendez.com
+          FAIL_TOTAL_COUNT: 40
           EXTERNAL: false
           SITE_WIDE: true
           SITEMAP: true
@@ -18,4 +18,6 @@ jobs:
           TLD: true
           LIST: true
           UPGRADE: true
-          RECORD: recordings
+          UPLOAD: true
+        # env:
+        #   DEFAULT_RUNNERS: htmlcs
