test(axe): add fast_axe only

--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -20,4 +20,4 @@ jobs:
           UPGRADE: true
           UPLOAD: true
         env:
-          DEFAULT_RUNNERS: htmlcs
+          DEFAULT_RUNNERS: axe
