--- a/action.yml
+++ b/action.yml
@@ -99,7 +99,7 @@ outputs:
 runs:
   using: composite
   steps:
-    - uses: actions/checkout@v3.0.2
+    - uses: actions/checkout@v4
       if: ${{ inputs.FIX == 'true' }}
       with:
         repository: ${{ github.event.pull_request.head.repo.full_name }}
@@ -189,7 +189,7 @@ runs:
       if: ${{ inputs.RECORD && inputs.RECORD != 'false' }}
 
     - name: Build A11yWatch Service
-      if: ${{ inputs.EXTERNAL != 'true' }}
+      if: ${{ inputs.EXTERNAL != 'true' && inputs.UPGRADE == 'true' }}
       shell: bash
       run: a11ywatch build --standalone --local ${{ inputs.UPGRADE == 'true' && '--upgrade' || '' }}
 
