--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -7,6 +7,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: A11yWatch website scan
+        id: a11ywatch-results-generator
         uses: ./
         with:
           WEBSITE_URL: https://jeffmendez.com
@@ -18,3 +19,7 @@ jobs:
         env:
           DEFAULT_RUNNERS: htmlcs
           PAGEMIND_IGNORE_WARNINGS: true
+      - name: Get Results
+        run: |
+          echo "website accessibility score ${{ fromJson(steps['a11ywatch-results-generator'].outputs.results).data[0].issuesInfo.accessScore }}"
+          echo ${{ toJSON(steps['a11ywatch-results-generator'].outputs.results) }} | jq ". | tojson"
