--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -1,5 +1,11 @@
 name: Tests
-on: [pull_request]
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
 jobs:
   run-container:
     name: End to End
@@ -10,7 +16,7 @@ jobs:
         id: a11ywatch-results-generator
         uses: ./
         with:
-          WEBSITE_URL: https://jeffmendez.com
+          WEBSITE_URL: ${{ secrets.WEBSITE_URL }}
           FAIL_TOTAL_COUNT: 100
           EXTERNAL: false
           SITE_WIDE: true
@@ -19,6 +25,7 @@ jobs:
         env:
           DEFAULT_RUNNERS: htmlcs
           PAGEMIND_IGNORE_WARNINGS: true
+
       - name: Get Results
         run: |
           echo "website accessibility score ${{ fromJson(steps['a11ywatch-results-generator'].outputs.results).data[0].issuesInfo.accessScore }}"
