--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -17,7 +17,7 @@ jobs:
         uses: ./
         with:
           WEBSITE_URL: ${{ secrets.WEBSITE_URL }}
-          FAIL_TOTAL_COUNT: 100
+          FAIL_ERRORS_COUNT: 20
           EXTERNAL: true
           SITE_WIDE: true
           LIST: true
@@ -25,6 +25,7 @@ jobs:
           A11YWATCH_TOKEN: ${{ secrets.A11YWATCH_TOKEN }}
         env:
           DEFAULT_RUNNERS: htmlcs
+          # no effect when EXTERNAL: true. The configuration needs to be applied on the dashboard for the website.
           PAGEMIND_IGNORE_WARNINGS: true
 
       - name: Get Results
